{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 35,
  "lineage": "fb1da0c3-2ef2-3949-477e-dc2c90c2db23",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "fit_cli",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:958525475024:security-group/sg-0d7f0565513f225f1",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7f0565513f225f1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "All traffic between members of this security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "958525475024",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fit-cli-default"
            },
            "tags_all": {
              "Environment": "fit-cli",
              "Name": "fit-cli-default"
            },
            "vpc_id": "vpc-01b5328d47e7b9419"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.fit_cli"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fit_cli",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:958525475024:internet-gateway/igw-0f267312147b69648",
            "id": "igw-0f267312147b69648",
            "owner_id": "958525475024",
            "region": "us-west-2",
            "tags": {
              "Name": "fit-cli-igw"
            },
            "tags_all": {
              "Environment": "fit-cli",
              "Name": "fit-cli-igw"
            },
            "vpc_id": "vpc-01b5328d47e7b9419"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "958525475024",
            "id": "igw-0f267312147b69648",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.fit_cli"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fit_cli_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:958525475024:route-table/rtb-0e353722675cd01e0",
            "id": "rtb-0e353722675cd01e0",
            "owner_id": "958525475024",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f267312147b69648",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fit-cli-public-rt"
            },
            "tags_all": {
              "Environment": "fit-cli",
              "Name": "fit-cli-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b5328d47e7b9419"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "958525475024",
            "id": "rtb-0e353722675cd01e0",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.fit_cli",
            "aws_vpc.fit_cli"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fit_cli_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a175212fef84f2f",
            "region": "us-west-2",
            "route_table_id": "rtb-0e353722675cd01e0",
            "subnet_id": "subnet-0c9e623708a87ee88"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "958525475024",
            "id": "rtbassoc-01a175212fef84f2f",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.fit_cli",
            "aws_route_table.fit_cli_public",
            "aws_subnet.fit_cli_public",
            "aws_vpc.fit_cli"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fit_cli_vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:958525475024:security-group/sg-015b8dc157b5fd66c",
            "description": "Allows instances in the fit-cli VPC to reach the SSM interface endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-015b8dc157b5fd66c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.50.0.0/16"
                ],
                "description": "HTTPS from the fit-cli VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "fit-cli-vpc-endpoints",
            "name_prefix": "",
            "owner_id": "958525475024",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fit-cli-vpc-endpoints"
            },
            "tags_all": {
              "Environment": "fit-cli",
              "Name": "fit-cli-vpc-endpoints"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b5328d47e7b9419"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "958525475024",
            "id": "sg-015b8dc157b5fd66c",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.fit_cli"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fit_cli_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:958525475024:subnet/subnet-0c9e623708a87ee88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.50.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9e623708a87ee88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "958525475024",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "fit-cli-public"
            },
            "tags_all": {
              "Environment": "fit-cli",
              "Name": "fit-cli-public"
            },
            "vpc_id": "vpc-01b5328d47e7b9419"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "958525475024",
            "id": "subnet-0c9e623708a87ee88",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.fit_cli"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fit_cli",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:958525475024:vpc/vpc-01b5328d47e7b9419",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.50.0.0/16",
            "default_network_acl_id": "acl-0dea808784b7c6c9c",
            "default_route_table_id": "rtb-074362212adfb0cc8",
            "default_security_group_id": "sg-0d7f0565513f225f1",
            "dhcp_options_id": "dopt-81c573e4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01b5328d47e7b9419",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-074362212adfb0cc8",
            "owner_id": "958525475024",
            "region": "us-west-2",
            "tags": {
              "Name": "fit-cli-vpc"
            },
            "tags_all": {
              "Environment": "fit-cli",
              "Name": "fit-cli-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "958525475024",
            "id": "vpc-01b5328d47e7b9419",
            "region": "us-west-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "fit_cli_s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:958525475024:vpc-endpoint/vpce-0b89a75d0f3fca2b6",
            "cidr_blocks": [
              "3.5.76.0/22",
              "16.12.96.0/20",
              "16.12.112.0/21",
              "3.5.80.0/21",
              "16.15.32.0/20",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "16.12.88.0/21",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b89a75d0f3fca2b6",
            "ip_address_type": "ipv4",
            "owner_id": "958525475024",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "region": "us-west-2",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0e353722675cd01e0"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "service_region": "us-west-2",
            "state": "available",
            "tags": {
              "Name": "fit-cli-s3"
            },
            "tags_all": {
              "Environment": "fit-cli",
              "Name": "fit-cli-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-01b5328d47e7b9419"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "958525475024",
            "id": "vpce-0b89a75d0f3fca2b6",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.fit_cli",
            "aws_route_table.fit_cli_public",
            "aws_vpc.fit_cli"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "fit_cli_ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2messages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:958525475024:vpc-endpoint/vpce-0b03ab0da618786f9",
            "dns_entry": [
              {
                "dns_name": "vpce-0b03ab0da618786f9-m2u8px40.ec2messages.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0b03ab0da618786f9-m2u8px40-us-west-2b.ec2messages.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "ec2messages.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z04903197C5MUVEAKL28"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b03ab0da618786f9",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-089e3ba8db3707016"
            ],
            "owner_id": "958525475024",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-west-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-015b8dc157b5fd66c"
            ],
            "service_name": "com.amazonaws.us-west-2.ec2messages",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.50.1.138",
                "subnet_id": "subnet-0c9e623708a87ee88"
              }
            ],
            "subnet_ids": [
              "subnet-0c9e623708a87ee88"
            ],
            "tags": {
              "Name": "fit-cli-ec2messages"
            },
            "tags_all": {
              "Environment": "fit-cli",
              "Name": "fit-cli-ec2messages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01b5328d47e7b9419"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "958525475024",
            "id": "vpce-0b03ab0da618786f9",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.fit_cli_vpc_endpoints",
            "aws_subnet.fit_cli_public",
            "aws_vpc.fit_cli"
          ]
        },
        {
          "index_key": "ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:958525475024:vpc-endpoint/vpce-009aac4173aec1614",
            "dns_entry": [
              {
                "dns_name": "vpce-009aac4173aec1614-j983c2jk.ssm.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-009aac4173aec1614-j983c2jk-us-west-2b.ssm.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "ssm.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z0959953DGKZ3AYCCWW0"
              },
              {
                "dns_name": "ssm.us-west-2.api.aws",
                "hosted_zone_id": "Z098048927I96QC9CT6WI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-009aac4173aec1614",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01639ee2c82c8618c"
            ],
            "owner_id": "958525475024",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-west-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-015b8dc157b5fd66c"
            ],
            "service_name": "com.amazonaws.us-west-2.ssm",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.50.1.165",
                "subnet_id": "subnet-0c9e623708a87ee88"
              }
            ],
            "subnet_ids": [
              "subnet-0c9e623708a87ee88"
            ],
            "tags": {
              "Name": "fit-cli-ssm"
            },
            "tags_all": {
              "Environment": "fit-cli",
              "Name": "fit-cli-ssm"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01b5328d47e7b9419"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "958525475024",
            "id": "vpce-009aac4173aec1614",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.fit_cli_vpc_endpoints",
            "aws_subnet.fit_cli_public",
            "aws_vpc.fit_cli"
          ]
        },
        {
          "index_key": "ssmmessages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:958525475024:vpc-endpoint/vpce-0a4f9026724b3b7fc",
            "dns_entry": [
              {
                "dns_name": "vpce-0a4f9026724b3b7fc-7ton4xoo.ssmmessages.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0a4f9026724b3b7fc-7ton4xoo-us-west-2b.ssmmessages.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "ssmmessages.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z0966297LJGZ43IWLWKO"
              },
              {
                "dns_name": "ssmmessages.us-west-2.api.aws",
                "hosted_zone_id": "Z09595621E8T5ERK60UGO"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a4f9026724b3b7fc",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-022556baaf4b7aa53"
            ],
            "owner_id": "958525475024",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-west-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-015b8dc157b5fd66c"
            ],
            "service_name": "com.amazonaws.us-west-2.ssmmessages",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.50.1.231",
                "subnet_id": "subnet-0c9e623708a87ee88"
              }
            ],
            "subnet_ids": [
              "subnet-0c9e623708a87ee88"
            ],
            "tags": {
              "Name": "fit-cli-ssmmessages"
            },
            "tags_all": {
              "Environment": "fit-cli",
              "Name": "fit-cli-ssmmessages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01b5328d47e7b9419"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "958525475024",
            "id": "vpce-0a4f9026724b3b7fc",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.fit_cli_vpc_endpoints",
            "aws_subnet.fit_cli_public",
            "aws_vpc.fit_cli"
          ]
        }
      ]
    }
  ]
}